# stationeers-ic10-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: parse_wiki.py
stationeers_ic10_mcp/: __init__.py  server.py
stationeers_ic10_mcp/data/: device_AIMEe.json  device_Active_Vent.json  device_Advanced_Composter.json  device_Advanced_Furnace.json  device_Air_Conditioner.json  device_Airlock__Structure_.json  device_Autolathe.json  device_Automated_Hydroponics.json  device_Back_Pressure_Regulator.json  device_Basic_Chutes.json  device_Basket_Hoop.json  device_Battery_Charger.json  device_Battery_Charger_Small.json  device_Beacon.json  device_Blast_Doors.json  device_Circuitboard__Advanced_Airlock_.json  device_Circuitboard__Airlock_Control_.json  device_Combustion_Centrifuge.json  device_Composite_Door.json  device_Composite_Roll_Cover.json  device_Computer.json  device_Console.json  device_Control_Chair.json  device_Cryotube.json  device_Data_Parameters.json  device_Dock_Port_Side.json  device_Electrolyzer.json  device_Electronics_Printer.json  device_Elevator.json  device_Fabricator.json  device_Filtration.json  device_Flashing_Light.json  device_Furnace.json  device_Gas_Tank_Storage.json  device_Glass_Door.json  device_Hardsuit.json  device_Hardsuit_Helmet.json  device_Hardsuit_Jetpack.json  device_Hydraulic_Pipe_Bender.json  device_Hydroponics_Device.json  (+83 more)
