[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stationeers-ic10-mcp"
version = "0.5.0"
description = "MCP server for Stationeers IC10 programming language reference"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
stationeers-ic10 = "stationeers_ic10_mcp.server:main"
stationeers-ic10-mcp = "stationeers_ic10_mcp.server:main"

[tool.setuptools.package-data]
stationeers_ic10_mcp = ["data/*.json"]
